--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     margin-left: 0;
                 }
             }
+            .w3-section a{
+                text-decoration: none;
+            }
         </style>
 
 
@@ -143,23 +146,10 @@
                 <div class="w3-section">
                     <p><i class="fa fa-map-marked-alt fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Lagos, NG</p>
                     <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +2347030935403</p>
-                    <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: toluwaniokunowo@gmail.com</p>
+                    <a href="mailto:toluwaniokunowo@gmail.com"><p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i>Email: toluwaniokunowo@gmail.com</p></a>
                 </div><br>
-                <p>Wanna get in touch? Send me a message:</p>
-
-                <form action="/action_page.php" target="_blank">
-                    <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
-                    <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
-                    <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
-                    <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
-                    <p>
-                    <button class="w3-button w3-light-grey w3-padding-large" type="submit">
-                        <i class="fa fa-paper-plane"></i> SEND MESSAGE
-                    </button>
-                    </p>
-                </form>
-                <!-- End Contact Section -->
             </div>
+            <!-- End Contact Section -->
 
             <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
                 <i class="fab fa-facebook w3-hover-opacity"></i>
